# API/api/openapi.yaml
@@ -35,16 +35,14 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/QuotationResponse'
+                $ref: '#/components/schemas/QuotationResponse'
                 x-content-type: application/json
       x-swagger-router-controller: Transport
     get:
       tags:
         - transport
       summary: Returns all quotations
-      operationId: getProviders
+      operationId: getQuotations
       responses:
         "200":
           description: successful operation
@@ -105,9 +103,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/QuotationResponse'
+                $ref: '#/components/schemas/QuotationResponse'
                 x-content-type: application/json
       x-swagger-router-controller: Transport
     delete:
